fixed calendar cell misalignment

--- a/apps/client/src/App.css
+++ b/apps/client/src/App.css
@@ -9,3 +9,18 @@
   content: '⋮';
   font-size: 30pt;
 }
+
+/**
+ * needed to set the table cells to the correct height...for some reason?
+ */
+@media (min-resolution: 120dpi) {
+  html {
+    font-size: 14px;
+  }
+}
+
+@media (min-resolution: 144dpi) {
+  html {
+    font-size: 12px;
+  }
+}
